# FO--ml-seismic-classifier

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  seismic_requirements.txt
iquique/: metadata.csv
models/: multiclass_seismic_classifier_scaler.joblib
models/classificators/: earthquake_classifier_v1.joblib
models/phasenet/not_pretrained/: best_model.pth  last_model.pth
models/phasenet/pretrained_geofon/: best_model.pth  last_model.pth
notebooks/: data_analysis.ipynb  data_visualization.ipynb  dataset_classification.ipynb  iquique_dataset_analysis.ipynb  iquique_phasenet.ipynb  train_binary_classificator.ipynb  train_multiclass_classificator.ipynb
notebooks/models/: earthquake_classifier_v1_scaler.joblib
src/: constants.py  get_root_dir.py
src/category_classification/: helper_methods.py  train.py  train_mutliclass.py
src/data/: data.md  download_data.py  download_iquique.py
src/phasenet/: data_processing.py  get_model.py  model.py  predict.py  stream.py  train.py  visualize.py
src/streamlit/: app.py
src/streamlit/pages/: binary.py  multiclass.py  phasenet.py  visualization.py
src/visualization/: visualize_events.py
