[tool.poetry]
name = "fo-ml-seismic-classifier"
version = "0.1.0"
description = ""
authors = ["Mateusz Matukiewicz", "Bartosz Psik"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
polars = "^1.37.0"
datasets = "^4.4.2"
ipykernel = "^7.1.0"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
pandas = "^2.3.3"
numpy = "^2.4.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
joblib = "^1.5.3"
obspy = "^1.4.2"
streamlit = "^1.52.2"
loguru = "^0.7.3"
torch = "^2.9.1"
seisbench = "^0.10.2"
plotly = "^6.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"